Add negative test cases